Minor bug fixes with alignment

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -101,3 +101,7 @@ nav.navbar.navbar-default.navbar-fixed-bottom{
 .wd-text-justify{
     text-align: justify;
 }
+.wd-margin-left-right-15px{
+    margin-left: 15px;
+    margin-right:15px;
+}
